newproject/css/style.css
body {

}

#container {
  width: 1000px;
  height: 1000px;
  background-color: transparent;
}


 /* #trapezoid {
   border-bottom: 100px solid pink;
   background-size: contain;
   border-left: 25px solid transparent;
   border-right: 25px solid transparent;
   height: 20px;
   width: 100px;
   position:absolute;
 } */

/* .button {
  background-color: #4CAF50;
  border-radius: 8px;
} */

 .firstForm {
   display: none;
 }

 /* * css properties related to the jQuery UI dialog boxes style */
 .ui-dialog-titlebar {
   background-color: pink;
   background-image: none;
   color: black;
   font-weight: bold;
 }

 .ui-dialog {
   position: absolute;
   top: 0;
   left: 0;
   padding: .2em;
   outline: 0;
   background-color: transparent;
 }

 .ui-widget-content {
   border: 2px solid #dddddd;
   background: #ffffff;
   background-color: inherit;
   color: #333333;
 }

 .ui-widget {
   font-family: inherit;
   font-size: 1em;

